--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,19 @@
     </properties>
     <dependencies>
 
-        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-spatial -->
+        <!-- THYMELEAF -->
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <!-- ========= -->
+
+        <!-- POSTGIS -->
         <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-spatial</artifactId>
@@ -30,6 +42,7 @@
             <artifactId>jackson-datatype-jts</artifactId>
             <version>2.2</version>
         </dependency>
+        <!-- ========= -->
 
 
         <dependency>
