--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,14 @@
             <artifactId>jackson-datatype-jts</artifactId>
             <version>2.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.locationtech.jts.io/jts-io-common -->
+        <dependency>
+            <groupId>org.locationtech.jts.io</groupId>
+            <artifactId>jts-io-common</artifactId>
+            <version>1.19.0</version>
+        </dependency>
+
         <!-- ========= -->
 
 
@@ -69,6 +77,7 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
